toolchains updates, profile refactoring and version bumps
Dropping the owasp dependency checker maven plugin, as sonar 7.2.1
does a much better job (no false positives re: PHP).